--- a/assets/css/admin/buttons.scss
+++ b/assets/css/admin/buttons.scss
@@ -1,5 +1,5 @@
-.sf-nux .sf-nux-button,
-a.sf-nux-button {
+.woostify-nux .woostify-nux-button,
+a.woostify-nux-button {
 	background: #00aadc;
 	border-color: #0087be;
 	border-style: solid;
@@ -24,30 +24,25 @@ a.sf-nux-button {
 	-webkit-appearance: none;
 	appearance: none;
 	vertical-align: baseline;
-
 	&:hover,
 	&:focus {
 		border-color: #005082;
 		color: white;
 	}
-
 	&:focus {
 		box-shadow: 0 0 0 2px #78dcfa;
 	}
-
 	&:active {
 		border-width: 2px 1px 1px;
 		box-shadow: none;
 		vertical-align: baseline;
 	}
-
 	&[disabled],
 	&:disabled {
 		color: white;
 		background: tint(#78dcfa, 50%);
 		border-color: tint(#0087be, 55%);
 		cursor: default;
-
 		&:active {
 			border-width: 1px 1px 2px;
 		}
