--- a/assets/css/admin/customizer/customizer.css
+++ b/assets/css/admin/customizer/customizer.css
@@ -1,5 +1,5 @@
-.sf-nux .sf-nux-button,
-a.sf-nux-button {
+.woostify-nux .woostify-nux-button,
+a.woostify-nux-button {
   background: #00aadc;
   border-color: #0087be;
   border-style: solid;
@@ -23,33 +23,44 @@ a.sf-nux-button {
   padding: 7px 14px 9px;
   -webkit-appearance: none;
   appearance: none;
-  vertical-align: baseline; }
-  .sf-nux .sf-nux-button:hover, .sf-nux .sf-nux-button:focus,
-  a.sf-nux-button:hover,
-  a.sf-nux-button:focus {
-    border-color: #005082;
-    color: white; }
-  .sf-nux .sf-nux-button:focus,
-  a.sf-nux-button:focus {
-    box-shadow: 0 0 0 2px #78dcfa; }
-  .sf-nux .sf-nux-button:active,
-  a.sf-nux-button:active {
-    border-width: 2px 1px 1px;
-    box-shadow: none;
-    vertical-align: baseline; }
-  .sf-nux .sf-nux-button[disabled], .sf-nux .sf-nux-button:disabled,
-  a.sf-nux-button[disabled],
-  a.sf-nux-button:disabled {
-    color: white;
-    background: tint(#78dcfa, 50%);
-    border-color: tint(#0087be, 55%);
-    cursor: default; }
-    .sf-nux .sf-nux-button[disabled]:active, .sf-nux .sf-nux-button:disabled:active,
-    a.sf-nux-button[disabled]:active,
-    a.sf-nux-button:disabled:active {
-      border-width: 1px 1px 2px; }
+  vertical-align: baseline;
+}
 
-.sf-guided-tour {
+.woostify-nux .woostify-nux-button:hover, .woostify-nux .woostify-nux-button:focus,
+a.woostify-nux-button:hover,
+a.woostify-nux-button:focus {
+  border-color: #005082;
+  color: white;
+}
+
+.woostify-nux .woostify-nux-button:focus,
+a.woostify-nux-button:focus {
+  box-shadow: 0 0 0 2px #78dcfa;
+}
+
+.woostify-nux .woostify-nux-button:active,
+a.woostify-nux-button:active {
+  border-width: 2px 1px 1px;
+  box-shadow: none;
+  vertical-align: baseline;
+}
+
+.woostify-nux .woostify-nux-button[disabled], .woostify-nux .woostify-nux-button:disabled,
+a.woostify-nux-button[disabled],
+a.woostify-nux-button:disabled {
+  color: white;
+  background: tint(#78dcfa, 50%);
+  border-color: tint(#0087be, 55%);
+  cursor: default;
+}
+
+.woostify-nux .woostify-nux-button[disabled]:active, .woostify-nux .woostify-nux-button:disabled:active,
+a.woostify-nux-button[disabled]:active,
+a.woostify-nux-button:disabled:active {
+  border-width: 1px 1px 2px;
+}
+
+.woostify-guided-tour {
   display: block;
   background-color: rgba(35, 40, 45, 0.95);
   border-radius: 5px;
@@ -65,96 +76,137 @@ a.sf-nux-button {
   transition-duration: 250ms;
   transition-property: opacity;
   transition-timing-function: ease-in-out;
-  opacity: 0; }
-  .sf-guided-tour::before {
-    content: '';
-    position: absolute;
-    top: 30px;
-    left: -14px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 14px 14px 14px 0;
-    border-color: transparent #23282d transparent transparent;
-    border-right-color: rgba(35, 40, 45, 0.95); }
-  .sf-guided-tour .sf-guided-tour-step {
-    padding: 30px;
-    overflow: hidden; }
-    .sf-guided-tour .sf-guided-tour-step p {
-      font-size: 1em;
-      line-height: 1.7; }
-    .sf-guided-tour .sf-guided-tour-step h2 {
-      margin-top: 0;
-      font-size: 1.1em;
-      font-weight: 500;
-      color: #fff; }
-    .sf-guided-tour .sf-guided-tour-step .sf-guided-tour-skip {
-      margin-left: 10px;
-      color: #00aadc; }
-      .sf-guided-tour .sf-guided-tour-step .sf-guided-tour-skip:hover {
-        opacity: 0.75; }
-  .sf-guided-tour:not(.sf-first-step) .sf-guided-tour-step a.sf-nux-button {
-    display: none; }
-  .sf-guided-tour:not(.sf-first-step) .sf-guided-tour-step .sf-guided-tour-skip {
-    display: block;
-    float: right; }
-  .sf-guided-tour.sf-inside-section .sf-guided-tour-step a.sf-nux-button {
-    display: inline-block; }
-  .sf-guided-tour.sf-inside-section .sf-guided-tour-step .sf-guided-tour-skip {
-    display: none; }
-  .sf-guided-tour.sf-last-step .sf-guided-tour-step a.sf-nux-button {
-    display: inline-block; }
+  opacity: 0;
+}
 
-a.sf-nux-button {
-  vertical-align: middle; }
-  a.sf-nux-button:active {
-    vertical-align: middle; }
+.woostify-guided-tour::before {
+  content: '';
+  position: absolute;
+  top: 30px;
+  left: -14px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 14px 14px 14px 0;
+  border-color: transparent #23282d transparent transparent;
+  border-right-color: rgba(35, 40, 45, 0.95);
+}
 
-.sf-loaded {
-  opacity: 1; }
+.woostify-guided-tour .woostify-guided-tour-step {
+  padding: 30px;
+  overflow: hidden;
+}
 
-.sf-moving {
+.woostify-guided-tour .woostify-guided-tour-step p {
+  font-size: 1em;
+  line-height: 1.7;
+}
+
+.woostify-guided-tour .woostify-guided-tour-step h2 {
+  margin-top: 0;
+  font-size: 1.1em;
+  font-weight: 500;
+  color: #fff;
+}
+
+.woostify-guided-tour .woostify-guided-tour-step .woostify-guided-tour-skip {
+  margin-left: 10px;
+  color: #00aadc;
+}
+
+.woostify-guided-tour .woostify-guided-tour-step .woostify-guided-tour-skip:hover {
+  opacity: 0.75;
+}
+
+.woostify-guided-tour:not(.woostify-first-step) .woostify-guided-tour-step a.woostify-nux-button {
+  display: none;
+}
+
+.woostify-guided-tour:not(.woostify-first-step) .woostify-guided-tour-step .woostify-guided-tour-skip {
+  display: block;
+  float: right;
+}
+
+.woostify-guided-tour.woostify-inside-section .woostify-guided-tour-step a.woostify-nux-button {
+  display: inline-block;
+}
+
+.woostify-guided-tour.woostify-inside-section .woostify-guided-tour-step .woostify-guided-tour-skip {
+  display: none;
+}
+
+.woostify-guided-tour.woostify-last-step .woostify-guided-tour-step a.woostify-nux-button {
+  display: inline-block;
+}
+
+a.woostify-nux-button {
+  vertical-align: middle;
+}
+
+a.woostify-nux-button:active {
+  vertical-align: middle;
+}
+
+.woostify-loaded {
+  opacity: 1;
+}
+
+.woostify-moving {
   transition-duration: 250ms;
   transition-property: transform;
-  transition-timing-function: cubic-bezier(0.84, 0.45, 0.68, 1.44); }
+  transition-timing-function: cubic-bezier(0.84, 0.45, 0.68, 1.44);
+}
 
-.sf-entering .sf-guided-tour,
-.sf-exiting .sf-guided-tour {
+.woostify-entering .woostify-guided-tour,
+.woostify-exiting .woostify-guided-tour {
   animation-duration: 0.3s;
   animation-timing-function: ease-in-out;
   -webkit-animation-duration: 0.3s;
-  -webkit-animation-timing-function: ease-in-out; }
+  -webkit-animation-timing-function: ease-in-out;
+}
 
-.sf-entering .sf-guided-tour {
+.woostify-entering .woostify-guided-tour {
   animation-name: bounceInLeft;
-  -webkit-animation-name: bounceInLeft; }
+  -webkit-animation-name: bounceInLeft;
+}
 
-.sf-exiting .sf-guided-tour {
+.woostify-exiting .woostify-guided-tour {
   animation-name: bounceOutRight;
-  -webkit-animation-name: bounceOutRight; }
+  -webkit-animation-name: bounceOutRight;
+}
 
 @-webkit-keyframes bounceInLeft {
   from {
     opacity: 0;
-    -webkit-transform: translateX(100%); }
+    -webkit-transform: translateX(100%);
+  }
   to {
     opacity: 1;
-    -webkit-transform: translateX(0); } }
+    -webkit-transform: translateX(0);
+  }
+}
 
 @keyframes bounceInLeft {
   from {
     opacity: 0;
-    transform: translateX(100%); }
+    transform: translateX(100%);
+  }
   to {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @-webkit-keyframes bounceOutRight {
   to {
     opacity: 0;
-    -webkit-transform: translateX(100%); } }
+    -webkit-transform: translateX(100%);
+  }
+}
 
 @keyframes bounceOutRight {
   to {
     opacity: 0;
-    transform: translateX(100%); } }
+    transform: translateX(100%);
+  }
+}
