--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -2,13 +2,26 @@
   /*  */
 }
 
+@media (max-width: 719px) {
+  .appearance_page_woostify-welcome #wpcontent {
+    padding-left: 0;
+  }
+}
+
 .appearance_page_woostify-welcome .woostify-wrap {
   background: #e9eff3;
-  padding: 50px;
+  padding: 50px 10px 0 10px;
   border: 10px solid white;
-  margin-top: 20px;
-  margin-right: 20px;
   color: #608299;
+  margin: 0 auto;
+}
+
+@media (min-width: 720px) {
+  .appearance_page_woostify-welcome .woostify-wrap {
+    padding: 50px;
+    margin-top: 20px;
+    margin-right: 20px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-wrap h1,
@@ -31,31 +44,61 @@
 
 .appearance_page_woostify-welcome .woostify-welcome-nav {
   background-color: #0087be;
-  margin: -50px -50px 0 -50px;
-}
-
-.appearance_page_woostify-welcome .woostify-welcome-nav a {
-  text-decoration: none;
-  color: #fff;
-  display: inline-block;
+  margin: -50px -10px 0 -10px;
   padding: 1em;
 }
 
+@media (min-width: 720px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav {
+    margin: -50px -50px 0 -50px;
+    padding: 0 1em;
+  }
+}
+
 .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav__version {
-  float: right;
-  color: #a5c9e1;
+  color: #fff;
   display: inline-block;
-  padding: 1em 2em;
+  padding: 0.5em 0;
+  font-weight: 700;
+}
+
+@media (min-width: 600px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav__version {
+    float: right;
+    padding: 1em 1em 1em 0;
+    font-weight: normal;
+    color: #a5c9e1;
+  }
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link {
+  margin: 0;
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
+  display: block;
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 0.5em 0;
+}
+
+@media (min-width: 600px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
+    display: inline-block;
+  }
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
+    padding: 1em;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-welcome-nav ul,
 .appearance_page_woostify-welcome .woostify-welcome-nav li {
   list-style: none;
   padding: 0;
-}
-
-.appearance_page_woostify-welcome .woostify-welcome-nav ul {
-  margin: 0 0 0 1em;
 }
 
 .appearance_page_woostify-welcome .woostify-welcome-nav li {
@@ -68,12 +111,19 @@
   background: #fff;
   display: block;
   margin: 0 auto;
-  border-radius: 100%;
-  width: 150px;
-  height: 150px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
   text-align: center;
   position: relative;
   margin-top: -20px;
+}
+
+@media (min-width: 600px) {
+  .appearance_page_woostify-welcome .woostify-logo {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-logo span {
@@ -106,8 +156,14 @@
   display: flex;
   justify-content: center;
   align-items: stretch;
-  margin: 4em 0;
+  margin-top: 4em;
   flex-wrap: wrap;
+}
+
+@media (min-width: 1140px) {
+  .appearance_page_woostify-welcome .woostify-enhance {
+    margin: 4em 0px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance:after {
@@ -117,21 +173,37 @@
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance-content {
-  width: 500px;
-  margin-right: 20px;
-  float: left;
+  width: 100%;
+}
+
+@media (min-width: 1140px) {
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance-content {
+    max-width: 550px;
+    margin-right: 20px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance-sidebar {
-  width: 300px;
-  float: right;
+  width: 100%;
+}
+
+@media (min-width: 1140px) {
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance-sidebar {
+    max-width: 350px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column {
   border: 1px solid #d8e2e9;
   width: 100%;
   background: #fff;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+@media (min-width: 720px) {
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column {
+    margin-bottom: 20px;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex {
@@ -143,14 +215,16 @@
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item {
   margin: 10px 0;
+  width: 100%;
 }
 
-.appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(odd) {
-  width: 74%;
-}
-
-.appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(even) {
-  width: 26%;
+@media (min-width: 720px) {
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(odd) {
+    width: 74%;
+  }
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(even) {
+    width: 26%;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column h3 {
@@ -239,19 +313,14 @@
   padding: 0 1.5em;
 }
 
-.appearance_page_woostify-welcome .woostify-learn-more {
-  float: right;
+@media (min-width: 720px) {
+  .appearance_page_woostify-welcome .woostify-learn-more {
+    float: right;
+  }
 }
 
 @media all and (max-width: 768px) {
   .appearance_page_woostify-welcome .woostify-logo {
     margin-top: 20px;
-  }
-  .appearance_page_woostify-welcome .woostify-enhance {
-    display: block;
-    margin: 2em 0;
-  }
-  .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance__column {
-    margin: 1em auto;
   }
 }
