--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -1,13 +1,24 @@
 $green: #45b964;
 
 .appearance_page_woostify-welcome {
+	#wpcontent {
+		@media ( max-width: 719px ) {
+			padding-left: 0;
+		}
+	}
+
 	.woostify-wrap {
 		background: #e9eff3;
-		padding: 50px;
+		padding: 50px 10px 0 10px;
 		border: 10px solid white;
-		margin-top: 20px;
-		margin-right: 20px;
 		color: #608299;
+		margin: 0 auto;
+
+		@media ( min-width: 720px ) {
+			padding: 50px;
+			margin-top: 20px;
+			margin-right: 20px;
+		}
 
 		h1,
 		h2,
@@ -30,30 +41,59 @@ $green: #45b964;
 
 	.woostify-welcome-nav {
 		background-color: #0087be;
-		margin: -50px -50px 0 -50px;
-
-		a {
-			text-decoration: none;
-			color: #fff;
-			display: inline-block;
-			padding: 1em;
+		margin: -50px -10px 0 -10px;
+		padding: 1em;
+		
+		@media ( min-width: 720px ) {
+			margin: -50px -50px 0 -50px;
+			padding: 0 1em;
 		}
 
+		
+
 		.woostify-welcome-nav__version {
-			float: right;
-			color: #a5c9e1;
+			color: #fff;
 			display: inline-block;
-			padding: 1em 2em;
+			padding: 0.5em 0;
+			font-weight: 700;
+
+			@media ( min-width: 600px ) {
+				float: right;
+				padding: 1em 1em 1em 0;
+				font-weight: normal;
+				color: #a5c9e1
+			}
+		}
+
+		.woostify-welcome-nav_link{
+			margin: 0;
+
+			li{
+				display: block;
+			}
+
+			a{
+				text-decoration: none;
+				color: #fff;
+				display: block;
+				padding: 0.5em 0;
+			}
+
+			@media ( min-width: 600px )	{
+				li{
+					display: inline-block;
+				}
+
+				a {
+					padding: 1em;
+				}
+			}
 		}
 
 		ul,
 		li {
 			list-style: none;
 			padding: 0;
-		}
-
-		ul {
-			margin: 0 0 0 1em;
 		}
 
 		li {
@@ -67,12 +107,17 @@ $green: #45b964;
 		background: #fff;
 		display: block;
 		margin: 0 auto;
-		border-radius: 100%;
-		width: 150px;
-		height: 150px;
+		border-radius: 50%;
+		width: 100px;
+		height: 100px;
 		text-align: center;
 		position: relative;
 		margin-top: -20px;
+
+		@media ( min-width: 600px ) {
+			width: 150px;
+			height: 150px;
+		}
 
 		span {
 			position: absolute;
@@ -105,8 +150,12 @@ $green: #45b964;
 		display: flex;
 		justify-content: center;
 		align-items: stretch;
-		margin: 4em 0;
+		margin-top: 4em;
 		flex-wrap: wrap;
+
+		@media ( min-width: 1140px ) {
+			margin: 4em 0px;
+		}
 
 		&:after{
 			content: '';
@@ -115,21 +164,31 @@ $green: #45b964;
 		}
 
 		.woostify-enhance-content {
-			width: 500px;
-			margin-right: 20px;
-			float: left;
+			width: 100%;
+
+			@media ( min-width: 1140px ) {
+				max-width: 550px;
+				margin-right: 20px;
+			}
 		}
 
 		.woostify-enhance-sidebar {
-			width: 300px;
-			float: right;
+			width: 100%;
+
+			@media ( min-width: 1140px ) {
+				max-width: 350px;
+			}
 		}
 
 		.woostify-enhance__column {
 			border: 1px solid #d8e2e9;
 			width: 100%;
 			background: #fff;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
+
+			@media ( min-width: 720px ) {
+				margin-bottom: 20px;
+			}
 
 			.wst-flex {
 				display: flex;
@@ -139,13 +198,16 @@ $green: #45b964;
 
 				.link-to-customie-item {
 					margin: 10px 0;
+					width: 100%;
 
-					&:nth-child( odd ) {
-						width: 74%;
-					}
+					@media ( min-width: 720px ) {
+						&:nth-child( odd ) {
+							width: 74%;
+						}
 
-					&:nth-child( even ) {
-						width: 26%;
+						&:nth-child( even ) {
+							width: 26%;
+						}
 					}
 				}
 			}
@@ -248,7 +310,9 @@ $green: #45b964;
 	}
 
 	.woostify-learn-more{
-		float: right;
+		@media ( min-width: 720px ) {
+			float: right;
+		}
 	}
 }
 
@@ -256,15 +320,6 @@ $green: #45b964;
 	.appearance_page_woostify-welcome {
 		.woostify-logo {
 			margin-top: 20px;
-		}
-
-		.woostify-enhance {
-			display: block;
-			margin: 2em 0;
-
-			.woostify-enhance__column {
-				margin: 1em auto;
-			}
 		}
 	}
 }
