--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -1,122 +1,118 @@
-.site-footer{
-    margin-top: 100px;
-    clear: both;
+.site-footer {
+	margin-top: 100px;
+	clear: both;
 }
 
 /* FOOTER WIDGET COLUMNS */
 
-.footer-widget{
-    float: left;
-    width: 100%;
-    padding: 70px 0;
-    .widget{
-        float: left;
-    }
-}
-.footer-widget-col-1{
-    .widget{
-        width: 100%;
-    }
+.footer-widget {
+	float: left;
+	width: 100%;
+	padding: 55px 0 70px 0;
+	.widget {
+		float: left;
+	}
 }
 
-@media ( min-width: $screen-md ) {
-    @for $i from 3 through 6 {
-        .footer-widget-col-#{$i}{
-            .widget{
-                width: percentage( 1 / $i );
-                padding-left: $grid-gutter-width / 2;
-                padding-right: $grid-gutter-width / 2;
-                &:nth-of-type( #{$i}n+#{$i+1} ) {
-                    clear: both;
-                }
-            }
-        }
-    }
+.footer-widget-col-1 {
+	.widget {
+		width: 100%;
+	}
 }
 
-@media ( min-width: 600px ){
-    @media ( max-width: 991px ){
-        .footer-widget-col-3,
-        .footer-widget-col-4,
-        .footer-widget-col-5,
-        .footer-widget-col-6{
-            .widget{
-                width: 50%;
-                padding-left: $grid-gutter-width / 2;
-                padding-right: $grid-gutter-width / 2;
-                &:nth-of-type( 2n+3 ){
-                    clear: both;
-                }
-            }
-        }
-    }
-    .footer-widget-col-2{
-        .widget{
-            width: 50%;
-            padding-left: $grid-gutter-width / 2;
-            padding-right: $grid-gutter-width / 2;
-            &:nth-of-type( 2n+3 ){
-                clear: both;
-            }
-        }
-    }
+@media ( min-width: $screen-md) {
+	@for $i from 3 through 6 {
+		.footer-widget-col-#{$i} {
+			.widget {
+				width: percentage( 1 / $i);
+				padding-left: $grid-gutter-width / 2;
+				padding-right: $grid-gutter-width / 2;
+				&:nth-of-type( #{$i}n+#{$i+1}) {
+					clear: both;
+				}
+			}
+		}
+	}
 }
 
-@media ( max-width: 599px ){
-    .footer-widget-col-2,
-    .footer-widget-col-3,
-    .footer-widget-col-4,
-    .footer-widget-col-5,
-    .footer-widget-col-6{
-        .widget{
-            width: 100%;
-            padding-left: $grid-gutter-width / 2;
-            padding-right: $grid-gutter-width / 2;
-            clear: both;
-        }
-    }
+@media ( min-width: 600px) {
+	@media ( max-width: 991px) {
+		.footer-widget-col-3, .footer-widget-col-4, .footer-widget-col-5, .footer-widget-col-6 {
+			.widget {
+				width: 50%;
+				padding-left: $grid-gutter-width / 2;
+				padding-right: $grid-gutter-width / 2;
+				&:nth-of-type( 2n+3) {
+					clear: both;
+				}
+			}
+		}
+	}
+	.footer-widget-col-2 {
+		.widget {
+			width: 50%;
+			padding-left: $grid-gutter-width / 2;
+			padding-right: $grid-gutter-width / 2;
+			&:nth-of-type( 2n+3) {
+				clear: both;
+			}
+		}
+	}
+}
+
+@media ( max-width: 599px) {
+	.footer-widget-col-2,
+	.footer-widget-col-3,
+	.footer-widget-col-4,
+	.footer-widget-col-5,
+	.footer-widget-col-6 {
+		.widget {
+			width: 100%;
+			padding-left: $grid-gutter-width / 2;
+			padding-right: $grid-gutter-width / 2;
+			clear: both;
+		}
+	}
 }
 
 /* SITE INFOR */
-.site-info{
-    clear: both;
-    padding: 11px 0;
-    font-size: 11px;
-    text-transform: uppercase;
-    @include flex( flex, space-between, center );
 
-	&:not(:first-child){
+.site-info {
+	clear: both;
+	padding: 11px 0;
+	font-size: 11px;
+	text-transform: uppercase;
+	@include flex( flex, space-between, center);
+	&:not(:first-child) {
 		border-top: 1px solid #e3e3e3;
 	}
-
-	.site-infor-col{
-		&:first-child:last-child{
+	.site-infor-col {
+		&:first-child:last-child {
 			text-align: center;
 			width: 100%;
 		}
 	}
-
-    ul{
-        padding-left: 0;
-        margin: 0;
-        > li{
-            +li{
-                margin-left: 30px;
-            }
-        }
-    }
-    li{
-        display: inline-block;
-    }
+	ul {
+		padding-left: 0;
+		margin: 0;
+		> li {
+			+ li {
+				margin-left: 30px;
+			}
+		}
+	}
+	li {
+		display: inline-block;
+	}
 }
 
 /* responsive */
-@media ( max-width: $screen-sm ) {
-	.site-info{
+
+@media ( max-width: $screen-sm) {
+	.site-info {
 		flex-direction: column;
 		justify-content: center;
-
-		.site-infor-col{
+		.site-infor-col {
 			text-align: center;
 		}
 	}
