WOOSTIFY-23 #comment demo customize; fix theme check error

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -38,7 +38,8 @@
 	margin-top: 3.5em;
 	@extend .clearfix;
 
-	.single-product &{
+	.single-product &,
+	.elementor-page &{
 		margin-top: 0;
 	}
 }
