--- a/assets/css/sass/woocommerce/product-columns.scss
+++ b/assets/css/sass/woocommerce/product-columns.scss
@@ -5,7 +5,7 @@
 
     @extend .clearfix;
 
-    .product {
+    .type-product {
         list-style: none;
         float: left;
         margin: 0 30px 56px 0;
@@ -40,7 +40,7 @@
     }
 
     &.columns-1 {
-        .product{
+        .type-product{
             width: 100%;
             margin-right: 0;
         }
@@ -49,7 +49,7 @@
     @media ( min-width: $screen-md ) {
         @for $i from 2 through 6 {
             &.columns-#{ $i } {
-                .product{
+                .type-product{
                     width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
                     
                     &:nth-of-type( #{ $i }n + #{ $i + 1 } ) {
@@ -58,5 +58,26 @@
                 }
             }
         }
+    }
+	
+	/* For product grid inside Elementor Edit Mode */
+    @at-root .elementor-editor-active {
+    	@media ( min-width: $screen-md ) {
+	        @for $i from 2 through 6 {
+	            .products.columns-#{ $i } {
+	                .type-product{
+	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
+
+	                    &:nth-of-type( #{ $i }n ) {
+	                    	margin-right: 0;
+	                    }
+	                    
+	                    &:nth-of-type( #{ $i }n + #{ $i + 1 } ) {
+	                        clear: both;
+	                    }
+	                }
+	            }
+	        }
+	    }
     }
 }
