--- a/assets/css/sass/modules/photoswipe-default-skin.scss
+++ b/assets/css/sass/modules/photoswipe-default-skin.scss
@@ -6,18 +6,19 @@
 
 /* pswp = photoswipe */
 
-.logged-in.admin-bar{
-	@media ( min-width: 783px ) {
+.logged-in.admin-bar {
+	@media ( min-width: 783px) {
 		.pswp__top-bar {
 			top: 32px;
 		}
 	}
-	@media ( max-width: 782px ) {
+	@media ( max-width: 782px) {
 		.pswp__top-bar {
 			top: 46px;
 		}
 	}
 }
+
 .pswp {
 	display: none;
 	position: absolute;
@@ -33,10 +34,11 @@
 	/* create separate layer, to avoid paint on window.onscroll in webkit/blink */
 	-webkit-backface-visibility: hidden;
 	outline: none;
-	img{
+	img {
 		max-width: none;
 	}
 }
+
 /* style is added when JS option showHideOpacity is set to true */
 
 .pswp--animate_opacity {
@@ -47,27 +49,32 @@
 	-webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 	transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 }
+
 .pswp--open {
 	display: block;
 }
+
 .pswp--zoom-allowed .pswp__img {
 	/* autoprefixer: off */
 	cursor: -webkit-zoom-in;
 	cursor: -moz-zoom-in;
 	cursor: zoom-in;
 }
+
 .pswp--zoomed-in .pswp__img {
 	/* autoprefixer: off */
 	cursor: -webkit-grab;
 	cursor: -moz-grab;
 	cursor: grab;
 }
+
 .pswp--dragging .pswp__img {
 	/* autoprefixer: off */
 	cursor: -webkit-grabbing;
 	cursor: -moz-grabbing;
 	cursor: grabbing;
 }
+
 /*
     Background is added as a separate element.
     As animating opacity is much faster than animating rgba() background-color.
@@ -79,13 +86,14 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba( 0, 0, 0, 0.85 );
+	background-color: rgba( 0, 0, 0, 0.85);
 	opacity: 0;
 	-webkit-transform: translateZ(0);
 	transform: translateZ(0);
 	-webkit-backface-visibility: hidden;
 	will-change: opacity;
 }
+
 .pswp__scroll-wrap {
 	position: absolute;
 	left: 0;
@@ -94,7 +102,13 @@
 	height: 100%;
 	overflow: hidden;
 }
-.pswp__container, .pswp__zoom-wrap {
+
+.pswp__container {
+	transition: transform 0.3s ease-in-out;
+}
+
+.pswp__container,
+.pswp__zoom-wrap {
 	-ms-touch-action: none;
 	touch-action: none;
 	position: absolute;
@@ -103,9 +117,11 @@
 	top: 0;
 	bottom: 0;
 }
+
 /* Prevent selection and tap highlights */
 
-.pswp__container, .pswp__img {
+.pswp__container,
+.pswp__img {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -113,6 +129,7 @@
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
 }
+
 .pswp__zoom-wrap {
 	position: absolute;
 	width: 100%;
@@ -123,19 +140,25 @@
 	-webkit-transition: -webkit-transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
 	transition: transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
 }
+
 .pswp__bg {
 	will-change: opacity;
 	/* for open/close transition */
 	-webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 	transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 }
-.pswp--animated-in .pswp__bg, .pswp--animated-in .pswp__zoom-wrap {
+
+.pswp--animated-in .pswp__bg,
+.pswp--animated-in .pswp__zoom-wrap {
 	-webkit-transition: none;
 	transition: none;
 }
-.pswp__container, .pswp__zoom-wrap {
+
+.pswp__container,
+.pswp__zoom-wrap {
 	-webkit-backface-visibility: hidden;
 }
+
 .pswp__item {
 	position: absolute;
 	left: 0;
@@ -144,6 +167,7 @@
 	bottom: 0;
 	overflow: hidden;
 }
+
 .pswp__img {
 	position: absolute;
 	width: auto;
@@ -151,6 +175,7 @@
 	top: 0;
 	left: 0;
 }
+
 /*
     stretched thumbnail or div placeholder element (see below)
     style is added to avoid flickering in webkit/blink when layers overlap
@@ -159,6 +184,7 @@
 .pswp__img--placeholder {
 	-webkit-backface-visibility: hidden;
 }
+
 /*
     div element that matches size of large image
     large image loads on top of it
@@ -167,12 +193,14 @@
 .pswp__img--placeholder--blank {
 	background: #222;
 }
+
 .pswp--ie .pswp__img {
 	width: 100% !important;
 	height: auto !important;
 	left: 0;
 	top: 0;
 }
+
 /*
     Error message appears when image is not loaded
     (JS option errorMsg controls markup)
@@ -189,10 +217,12 @@
 	margin-top: -8px;
 	color: #CCC;
 }
+
 .pswp__error-msg a {
 	color: #CCC;
 	text-decoration: underline;
 }
+
 /*! PhotoSwipe Default UI CSS by Dmitry Semenov | photoswipe.com | MIT license */
 
 /*
@@ -235,73 +265,100 @@
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
-.pswp__button:focus, .pswp__button:hover {
+
+.pswp__button:focus,
+.pswp__button:hover {
 	opacity: 1;
 }
+
 .pswp__button:active {
 	outline: none;
 	opacity: 0.9;
 }
+
 .pswp__button::-moz-focus-inner {
 	padding: 0;
 	border: 0;
 }
+
 /* pswp__ui--over-close class it added when mouse is over element that should close gallery */
 
 .pswp__ui--over-close .pswp__button--close {
 	opacity: 1;
 }
-.pswp__button, .pswp__button--arrow--left:before, .pswp__button--arrow--right:before {
+
+.pswp__button,
+.pswp__button--arrow--left:before,
+.pswp__button--arrow--right:before {
 	background: url(assets/images/pswp/default-skin.png) 0 0 no-repeat;
 	background-size: 264px 88px;
 	width: 44px;
 	height: 44px;
 }
-@media (-webkit-min-device-pixel-ratio: 1.1), (-webkit-min-device-pixel-ratio: 1.09375), (min-resolution: 105dpi), (min-resolution: 1.1dppx) {
+
+@media (-webkit-min-device-pixel-ratio: 1.1),
+(-webkit-min-device-pixel-ratio: 1.09375),
+(min-resolution: 105dpi),
+(min-resolution: 1.1dppx) {
 	/* Serve SVG sprite if browser supports SVG and resolution is more than 105dpi */
-	.pswp--svg .pswp__button, .pswp--svg .pswp__button--arrow--left:before, .pswp--svg .pswp__button--arrow--right:before {
+	.pswp--svg .pswp__button,
+	.pswp--svg .pswp__button--arrow--left:before,
+	.pswp--svg .pswp__button--arrow--right:before {
 		background-image: url(assets/images/pswp/default-skin.svg);
 	}
-	.pswp--svg .pswp__button--arrow--left, .pswp--svg .pswp__button--arrow--right {
+	.pswp--svg .pswp__button--arrow--left,
+	.pswp--svg .pswp__button--arrow--right {
 		background: none;
 	}
 }
+
 .pswp__button--close {
 	background-position: 0 -44px;
 }
+
 .pswp__button--share {
 	background-position: -44px -44px;
 }
+
 .pswp__button--fs {
 	display: none;
 }
+
 .pswp--supports-fs .pswp__button--fs {
 	display: block;
 }
+
 .pswp--fs .pswp__button--fs {
 	background-position: -44px 0;
 }
+
 .pswp__button--zoom {
 	display: none;
 	background-position: -88px 0;
 }
+
 .pswp--zoom-allowed .pswp__button--zoom {
 	display: block;
 }
+
 .pswp--zoomed-in .pswp__button--zoom {
 	background-position: -132px 0;
 }
+
 /* no arrows on touch screens */
 
-.pswp--touch .pswp__button--arrow--left, .pswp--touch .pswp__button--arrow--right {
+.pswp--touch .pswp__button--arrow--left,
+.pswp--touch .pswp__button--arrow--right {
 	visibility: hidden;
 }
+
 /*
 	Arrow buttons hit area
 	(icon is added to :before pseudo-element)
 */
 
-.pswp__button--arrow--left, .pswp__button--arrow--right {
+.pswp__button--arrow--left,
+.pswp__button--arrow--right {
 	background: none;
 	top: 50%;
 	margin-top: -50px;
@@ -309,13 +366,17 @@
 	height: 100px;
 	position: absolute;
 }
+
 .pswp__button--arrow--left {
 	left: 0;
 }
+
 .pswp__button--arrow--right {
 	right: 0;
 }
-.pswp__button--arrow--left:before, .pswp__button--arrow--right:before {
+
+.pswp__button--arrow--left:before,
+.pswp__button--arrow--right:before {
 	content: '';
 	top: 35px;
 	background-color: rgba(0, 0, 0, 0.3);
@@ -323,26 +384,31 @@
 	width: 32px;
 	position: absolute;
 }
+
 .pswp__button--arrow--left:before {
 	left: 6px;
 	background-position: -138px -44px;
 }
+
 .pswp__button--arrow--right:before {
 	right: 6px;
 	background-position: -94px -44px;
 }
+
 /*
 
 	2. Share modal/popup and links
 
  */
 
-.pswp__counter, .pswp__share-modal {
+.pswp__counter,
+.pswp__share-modal {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 }
+
 .pswp__share-modal {
 	display: block;
 	background: rgba(0, 0, 0, 0.5);
@@ -359,9 +425,11 @@
 	-webkit-backface-visibility: hidden;
 	will-change: opacity;
 }
+
 .pswp__share-modal--hidden {
 	display: none;
 }
+
 .pswp__share-tooltip {
 	z-index: 1620;
 	position: absolute;
@@ -381,6 +449,7 @@
 	-webkit-backface-visibility: hidden;
 	will-change: transform;
 }
+
 .pswp__share-tooltip a {
 	display: block;
 	padding: 8px 12px;
@@ -389,30 +458,37 @@
 	font-size: 14px;
 	line-height: 18px;
 }
+
 .pswp__share-tooltip a:hover {
 	text-decoration: none;
 	color: #000;
 }
+
 .pswp__share-tooltip a:first-child {
 	/* round corners on the first/last list item */
 	border-radius: 2px 2px 0 0;
 }
+
 .pswp__share-tooltip a:last-child {
 	border-radius: 0 0 2px 2px;
 }
+
 .pswp__share-modal--fade-in {
 	opacity: 1;
 }
+
 .pswp__share-modal--fade-in .pswp__share-tooltip {
 	-webkit-transform: translateY(0);
 	-ms-transform: translateY(0);
 	transform: translateY(0);
 }
+
 /* increase size of share links on touch devices */
 
 .pswp--touch .pswp__share-tooltip a {
 	padding: 16px 12px;
 }
+
 a.pswp__share--facebook:before {
 	content: '';
 	display: block;
@@ -427,24 +503,30 @@ a.pswp__share--facebook:before {
 	-moz-pointer-events: none;
 	pointer-events: none;
 }
+
 a.pswp__share--facebook:hover {
 	background: #3E5C9A;
 	color: #FFF;
 }
+
 a.pswp__share--facebook:hover:before {
 	border-bottom-color: #3E5C9A;
 }
+
 a.pswp__share--twitter:hover {
 	background: #55ACEE;
 	color: #FFF;
 }
+
 a.pswp__share--pinterest:hover {
 	background: #CCC;
 	color: #CE272D;
 }
+
 a.pswp__share--download:hover {
 	background: #DDD;
 }
+
 /*
 
 	3. Index indicator ("1 of X" counter)
@@ -462,6 +544,7 @@ a.pswp__share--download:hover {
 	opacity: 0.75;
 	padding: 0 10px;
 }
+
 /*
 	
 	4. Caption
@@ -475,10 +558,12 @@ a.pswp__share--download:hover {
 	width: 100%;
 	min-height: 44px;
 }
+
 .pswp__caption small {
 	font-size: 11px;
 	color: #BBB;
 }
+
 .pswp__caption__center {
 	text-align: left;
 	max-width: 420px;
@@ -488,14 +573,17 @@ a.pswp__share--download:hover {
 	line-height: 20px;
 	color: #CCC;
 }
+
 .pswp__caption--empty {
 	display: none;
 }
+
 /* Fake caption element, used to calculate height of next/prev image */
 
 .pswp__caption--fake {
 	visibility: hidden;
 }
+
 /*
 
 	5. Loading indicator (preloader)
@@ -517,29 +605,36 @@ a.pswp__share--download:hover {
 	will-change: opacity;
 	direction: ltr;
 }
+
 .pswp__preloader__icn {
 	width: 20px;
 	height: 20px;
 	margin: 12px;
 }
+
 .pswp__preloader--active {
 	opacity: 1;
 }
+
 .pswp__preloader--active .pswp__preloader__icn {
 	/* We use .gif in browsers that don't support CSS animation */
 	background: url(assets/images/pswp/preloader.gif) 0 0 no-repeat;
 }
+
 .pswp--css_animation .pswp__preloader--active {
 	opacity: 1;
 }
+
 .pswp--css_animation .pswp__preloader--active .pswp__preloader__icn {
 	-webkit-animation: clockwise 500ms linear infinite;
 	animation: clockwise 500ms linear infinite;
 }
+
 .pswp--css_animation .pswp__preloader--active .pswp__preloader__donut {
 	-webkit-animation: donut-rotate 1000ms cubic-bezier(0.4, 0, 0.22, 1) infinite;
 	animation: donut-rotate 1000ms cubic-bezier(0.4, 0, 0.22, 1) infinite;
 }
+
 .pswp--css_animation .pswp__preloader__icn {
 	background: none;
 	opacity: 0.75;
@@ -550,6 +645,7 @@ a.pswp__share--download:hover {
 	top: 15px;
 	margin: 0;
 }
+
 .pswp--css_animation .pswp__preloader__cut {
 	/* 
 			The idea of animating inner circle is based on Polymer ("material") loading indicator 
@@ -560,6 +656,7 @@ a.pswp__share--download:hover {
 	height: 14px;
 	overflow: hidden;
 }
+
 .pswp--css_animation .pswp__preloader__donut {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
@@ -575,6 +672,7 @@ a.pswp__share--download:hover {
 	background: none;
 	margin: 0;
 }
+
 @media screen and (max-width: 1024px) {
 	.pswp__preloader {
 		position: relative;
@@ -584,6 +682,7 @@ a.pswp__share--download:hover {
 		float: right;
 	}
 }
+
 @-webkit-keyframes clockwise {
 	0% {
 		-webkit-transform: rotate(0deg);
@@ -594,6 +693,7 @@ a.pswp__share--download:hover {
 		transform: rotate(360deg);
 	}
 }
+
 @keyframes clockwise {
 	0% {
 		-webkit-transform: rotate(0deg);
@@ -604,6 +704,7 @@ a.pswp__share--download:hover {
 		transform: rotate(360deg);
 	}
 }
+
 @-webkit-keyframes donut-rotate {
 	0% {
 		-webkit-transform: rotate(0);
@@ -618,6 +719,7 @@ a.pswp__share--download:hover {
 		transform: rotate(0);
 	}
 }
+
 @keyframes donut-rotate {
 	0% {
 		-webkit-transform: rotate(0);
@@ -632,6 +734,7 @@ a.pswp__share--download:hover {
 		transform: rotate(0);
 	}
 }
+
 /*
 	
 	6. Additional styles
@@ -646,6 +749,7 @@ a.pswp__share--download:hover {
 	opacity: 1;
 	z-index: 1550;
 }
+
 /* top black bar with buttons and "1 of X" indicator */
 
 .pswp__top-bar {
@@ -655,50 +759,72 @@ a.pswp__share--download:hover {
 	height: 44px;
 	width: 100%;
 }
-.pswp__caption, .pswp__top-bar, .pswp--has_mouse .pswp__button--arrow--left, .pswp--has_mouse .pswp__button--arrow--right {
+
+.pswp__caption,
+.pswp__top-bar,
+.pswp--has_mouse .pswp__button--arrow--left,
+.pswp--has_mouse .pswp__button--arrow--right {
 	-webkit-backface-visibility: hidden;
 	will-change: opacity;
 	-webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 	transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 }
+
 /* pswp--has_mouse class is added only when two subsequent mousemove events occur */
 
-.pswp--has_mouse .pswp__button--arrow--left, .pswp--has_mouse .pswp__button--arrow--right {
+.pswp--has_mouse .pswp__button--arrow--left,
+.pswp--has_mouse .pswp__button--arrow--right {
 	visibility: visible;
 }
-.pswp__top-bar, .pswp__caption {
+
+.pswp__top-bar,
+.pswp__caption {
 	background-color: rgba(0, 0, 0, 0.5);
 }
+
 /* pswp__ui--fit class is added when main image "fits" between top bar and bottom bar (caption) */
 
-.pswp__ui--fit .pswp__top-bar, .pswp__ui--fit .pswp__caption {
+.pswp__ui--fit .pswp__top-bar,
+.pswp__ui--fit .pswp__caption {
 	background-color: rgba(0, 0, 0, 0.3);
 }
+
 /* pswp__ui--idle class is added when mouse isn't moving for several seconds (JS option timeToIdle) */
 
 .pswp__ui--idle .pswp__top-bar {
 	opacity: 0;
 }
-.pswp__ui--idle .pswp__button--arrow--left, .pswp__ui--idle .pswp__button--arrow--right {
+
+.pswp__ui--idle .pswp__button--arrow--left,
+.pswp__ui--idle .pswp__button--arrow--right {
 	opacity: 0;
 }
+
 /*
 	pswp__ui--hidden class is added when controls are hidden
 	e.g. when user taps to toggle visibility of controls
 */
 
-.pswp__ui--hidden .pswp__top-bar, .pswp__ui--hidden .pswp__caption, .pswp__ui--hidden .pswp__button--arrow--left, .pswp__ui--hidden .pswp__button--arrow--right {
+.pswp__ui--hidden .pswp__top-bar,
+.pswp__ui--hidden .pswp__caption,
+.pswp__ui--hidden .pswp__button--arrow--left,
+.pswp__ui--hidden .pswp__button--arrow--right {
 	/* Force paint & create composition layer for controls. */
 	opacity: 0.001;
 }
+
 /* pswp__ui--one-slide class is added when there is just one item in gallery */
 
-.pswp__ui--one-slide .pswp__button--arrow--left, .pswp__ui--one-slide .pswp__button--arrow--right, .pswp__ui--one-slide .pswp__counter {
+.pswp__ui--one-slide .pswp__button--arrow--left,
+.pswp__ui--one-slide .pswp__button--arrow--right,
+.pswp__ui--one-slide .pswp__counter {
 	display: none;
 }
+
 .pswp__element--disabled {
 	display: none !important;
 }
+
 .pswp--minimal--dark .pswp__top-bar {
 	background: none;
 }
