--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -1,26 +1,26 @@
-.site-full-width-container{
-	.woocommerce-tabs{
-		.woocommerce-Tabs-panel{
+.site-full-width-container {
+	.woocommerce-tabs {
+		.woocommerce-Tabs-panel {
 			max-width: 100%;
 		}
 	}
 }
 
-.product-page-container{
+.product-page-container {
 	padding-bottom: 90px;
 }
 
 /* SIDEBAR */
-.single-product{
+
+.single-product {
 	&:not(.site-full-width-container) {
 		&.left-sidebar,
-		&.right-sidebar{
-			.site-content{
+		&.right-sidebar {
+			.site-content {
 				@extend .container;
 			}
-
-			.site-main{
-				.container{
+			.site-main {
+				.container {
 					width: 100%;
 				}
 			}
@@ -29,85 +29,82 @@
 }
 
 /* ONSALE */
-.has-product-gallery{
-	.product-page-container{
-		.onsale{
+
+.has-product-gallery {
+	.product-page-container {
+		.onsale {
 			left: 80px;
 		}
 	}
 }
 
 /* GALLERY */
-.product-gallery{
+
+.product-gallery {
 	position: relative;
 	display: flex;
 	float: left;
 	max-width: 100%;
-
-	@media ( min-width: $screen-md ) {
-		width: calc( ( 100% - 30px ) / 2 );
+	@media ( min-width: $screen-md) {
+		width: calc( ( 100% - 30px) / 2);
 	}
 }
 
 /* product images */
-.product-images{
-	order: 2;
 
-	.image-item{
+.product-images {
+	order: 2;
+	.image-item {
 		margin: 0;
 		cursor: pointer;
 	}
 }
 
 /* product thumbnail images */
-.product-thumbnail-images{
-	@media ( min-width: $screen-sm ) {
+
+.product-thumbnail-images {
+	@media ( min-width: $screen-sm) {
 		width: 50px;
 		min-width: 50px;
 		margin-right: 20px;
 	}
-
-	.thumbnail-item{
+	.thumbnail-item {
 		cursor: pointer;
 		border: 1px solid $tr;
 		position: relative;
 	}
-
-	.tns-nav-active{
+	.tns-nav-active {
 		border-color: #555555;
 	}
 }
-/* spinner gallery */
-.has-product-gallery{
-	#product-images{
-		&:not(.tns-slider){
-			.image-item{
-				&:first-of-type{
-					@extend .circle-loading;
 
-					img{
+/* spinner gallery */
+
+.has-product-gallery {
+	#product-images {
+		&:not(.tns-slider) {
+			.image-item {
+				&:first-of-type {
+					@extend .circle-loading;
+					img {
 						opacity: 0;
 					}
-
-					~.image-item{
+					~ .image-item {
 						display: none;
 					}
 				}
 			}
 		}
 	}
-
-	#product-thumbnail-images{
-		&:not(.tns-slider){
-			.thumbnail-item{
-				&:first-of-type{
+	#product-thumbnail-images {
+		&:not(.tns-slider) {
+			.thumbnail-item {
+				&:first-of-type {
 					@extend .circle-loading;
-
-					img{
+					img {
 						opacity: 0;
 					}
-
-					~.thumbnail-item{
+					~ .thumbnail-item {
 						display: none;
 					}
 				}
@@ -116,143 +113,137 @@
 	}
 }
 
+/* image loading */
+.image-loading{
+	position: relative;
+
+	@extend .circle-loading;
+}
+
 /* SUMMARY */
-.summary.entry-summary{
+
+.summary.entry-summary {
 	float: left;
 	max-width: 100%;
-
-	@media ( min-width: $screen-md ) {
-		width: calc( ( 100% - 30px ) / 2 );
+	@media ( min-width: $screen-md) {
+		width: calc( ( 100% - 30px) / 2);
 		margin-left: 30px;
 	}
-
-	.price{
+	.price {
 		font-size: 24px;
 		margin-bottom: 18px;
 	}
 }
 
-.woocommerce-product-rating{
+.woocommerce-product-rating {
 	margin-bottom: 15px;
 }
 
-.woocommerce-product-details__short-description{
-	border: 1px solid #e8e8e8;
+.woocommerce-product-details__short-description {
 	border-left: 0;
 	border-right: 0;
 	padding: 35px 0;
-
-	p{
-		&:last-child{
+	p {
+		&:last-child {
 			margin-bottom: 0;
 		}
 	}
-
-	+.cart{
+	+ .cart {
 		margin-top: 20px;
 	}
 }
 
 // Group product.
-.woocommerce-grouped-product-list{
+.woocommerce-grouped-product-list {
 	border: 0;
 	margin-top: 0;
-
-	td{
+	td {
 		border-left: 0;
 		border-right: 0;
 		padding-left: 0;
 		padding-right: 0;
 	}
-
-	ins{
+	ins {
 		background-color: $tr;
 	}
 }
 
 // table variations.
-.variations{
+.variations {
 	border: 0;
-
-	td{
+	td {
 		display: block;
 		border: 0;
 		padding: 2px 0;
 	}
-
-	tr{
+	tr {
 		display: block;
-		+tr{
+		+ tr {
 			margin-top: 10px;
 		}
 	}
-
-	select{
+	select {
 		clear: both;
 		display: block;
 		height: 40px;
 		background-color: $tr;
 	}
-
-	label{
+	label {
 		text-transform: uppercase;
 	}
 }
 
-.reset_variations{
+.reset_variations {
 	float: left;
 	margin-top: 5px;
 	@include duration(0s);
-
-	&[style*="visibility: hidden"]{
+	&[style*="visibility: hidden"] {
 		height: 0;
 		margin-top: 0;
 	}
 }
 
-.shop_table{
-	.variation{
+.shop_table {
+	.variation {
 		margin: 0;
-
-		dt, dd{
+		dt,
+		dd {
 			display: inline-block;
 			font-weight: normal;
 		}
-
-		dd{
+		dd {
 			margin-bottom: 0;
 		}
-
-		p{
-			&:last-child{
+		p {
+			&:last-child {
 				margin-bottom: 0;
 			}
 		}
 	}
 }
 
-.stock{
+.stock {
 	margin-top: 10px;
 }
 
-.product_title{
+.product_title {
 	font-size: 24px;
 	margin-top: 0;
 	font-weight: normal;
 	margin-bottom: 10px;
 }
 
-.cart{
-	.quantity{
+.cart {
+	.quantity {
 		margin-right: 8px;
 	}
 }
 
-.woocommerce-variation-price{
+.woocommerce-variation-price {
 	margin-bottom: 10px;
 }
 
-.quantity{
+.quantity {
 	width: 170px;
 	height: 50px;
 	border-radius: 50px;
@@ -260,23 +251,20 @@
 	overflow: hidden;
 	background: #fff;
 	@extend .inline-flex;
-
-	.qty{
+	.qty {
 		text-align: center;
 		border: 0;
 		font-size: 16px;
 		background-color: $tr;
 		flex-grow: 1;
 		padding: 0 40px;
-		-moz-appearance:textfield;
-
+		-moz-appearance: textfield;
 		&::-webkit-inner-spin-button,
-		&::-webkit-outer-spin-button{
+		&::-webkit-outer-spin-button {
 			-webkit-appearance: none;
 		}
 	}
-
-	.product-qty{
+	.product-qty {
 		position: absolute;
 		font-family: $icon;
 		cursor: pointer;
@@ -284,28 +272,23 @@
 		height: 100%;
 		@extend .flex;
 	}
-
-	[data-qty="minus"]{
+	[data-qty="minus"] {
 		left: 0;
-
-		&:before{
+		&:before {
 			content: "\e622"
 		}
 	}
-
-	[data-qty="plus"]{
+	[data-qty="plus"] {
 		right: 0;
-
-		&:before{
+		&:before {
 			content: "\e61a"
 		}
 	}
 }
 
-.single_add_to_cart_button{
+.single_add_to_cart_button {
 	position: relative;
-
-	&.button{
+	&.button {
 		min-width: 200px;
 		height: 50px;
 		border-radius: 50px $i;
@@ -315,97 +298,83 @@
 	}
 }
 
-.product_meta{
+.product_meta {
 	margin-top: 20px;
-
-	>span{
+	> span {
 		display: block;
 	}
 }
 
 /* TABS */
-.woocommerce-tabs{
+
+.woocommerce-tabs {
 	display: block;
 	clear: both;
 	padding-top: 54px;
 	border-bottom: 1px solid #efefef;
 	padding-bottom: 50px;
-
-	.tabs{
+	.tabs {
 		margin: 0;
 		padding-left: 0;
 		text-align: center;
-
-		li{
+		li {
 			list-style: none;
 			display: inline-block;
 			margin: 0 30px;
 		}
-
-		a{
+		a {
 			font-size: 18px;
 		}
 	}
-
-	.woocommerce-Tabs-panel{
+	.woocommerce-Tabs-panel {
 		padding: 23px 0;
 		max-width: 770px;
 		margin: 0 auto;
 		display: none;
-
-		>h2{
+		> h2 {
 			display: none;
 		}
-
-		table{
+		table {
 			margin: 0;
 		}
-
-		p{
-			&:last-child{
+		p {
+			&:last-child {
 				margin-bottom: 0;
 			}
 		}
-	}
-
-	// comment reviews.
-	#reply-title{
+	} // comment reviews.
+	#reply-title {
 		display: none;
 	}
-
-	#comments{
+	#comments {
 		border-top: 0;
 		padding-top: 0;
 		margin-top: 0;
 	}
-
-	.woocommerce-Reviews-title{
+	.woocommerce-Reviews-title {
 		display: none;
 	}
-
-	.commentlist{
+	.commentlist {
 		padding-left: 0;
 		margin: 0;
 	}
-
-	.comment{
+	.comment {
 		margin-bottom: 40px;
 	}
-
-	.comment_container{
+	.comment_container {
 		display: flex;
 		justify-content: flex-start;
-		.avatar{
+		.avatar {
 			border-radius: 50%;
 			margin-right: 30px;
 			min-width: 60px;
 			width: 60px;
 			height: 60px;
 		}
-		.comment-text{
+		.comment-text {
 			flex-grow: 1;
 		}
-		.meta{
+		.meta {
 			margin-left: 10px;
 			margin-bottom: 0;
 			display: inline-block;
@@ -414,31 +383,30 @@
 			vertical-align: text-top;
 		}
 	}
-
-	.comment-notes{
+	.comment-notes {
 		width: 100%;
 	}
-
-	.comment-form{
-		>p{
+	.comment-form {
+		> p {
 			width: 100%;
 			margin-bottom: 0;
 		}
-		input{
-			&:not([type="submit"]){
+		input {
+			&:not([type="submit"]) {
 				width: 100%;
 			}
 		}
-		textarea{
+		textarea {
 			width: 100%;
 		}
 	}
 }
 
 /* RELATED && UPSELL */
+
 .related,
-.up-sells{
-	>h2{
+.up-sells {
+	> h2 {
 		text-align: center;
 		font-size: 18px;
 		font-weight: normal;
@@ -447,27 +415,25 @@
 }
 
 /* RESPONSIVE */
-@media ( max-width: $screen-md - 1 ) {
-	.summary.entry-summary{
+
+@media ( max-width: $screen-md - 1) {
+	.summary.entry-summary {
 		margin-top: 50px;
 		width: 100%;
 	}
-
-	.single_add_to_cart_button{
+	.single_add_to_cart_button {
 		display: block;
 		margin-top: 10px;
 	}
 }
 
-@media ( max-width: $screen-sm - 1 ) {
-	.product-gallery{
+@media ( max-width: $screen-sm - 1) {
+	.product-gallery {
 		display: block;
 	}
-
-	.product-thumbnail-images{
+	.product-thumbnail-images {
 		margin-top: 20px;
-
-		.thumbnail-item{
+		.thumbnail-item {
 			margin-right: 10px;
 		}
 	}
