logo setting responsive

--- a/style.css
+++ b/style.css
@@ -5148,7 +5148,7 @@ dd {
   content: "\e72c";
 }
 
-/* Woostify contact info */
+/* Contact info */
 .woostify-contact-info .contact-info-list {
   display: flex;
   align-items: flex-start;
