--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -11,7 +11,6 @@ $green: #45b964;
 		background: #e9eff3;
 		padding: 50px 10px 0 10px;
 		border: 10px solid white;
-		color: #608299;
 		margin: 0 auto;
 
 		@media ( min-width: 720px ) {
@@ -20,27 +19,17 @@ $green: #45b964;
 			margin-right: 20px;
 		}
 
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 {
-			color: #2e4453;
-		}
-
 		a {
-			color: #00aadc;
 			text-decoration: none;
+			outline: none !important;
 
-			&:hover{
-				opacity: 0.7;
+			&:focus{
+				box-shadow: none !important;
 			}
 		}
 	}
 
 	.woostify-welcome-nav {
-		background-color: #0087be;
 		margin: -50px -10px 0 -10px;
 		padding: 1em;
 		
@@ -60,8 +49,6 @@ $green: #45b964;
 			@media ( min-width: 600px ) {
 				float: right;
 				padding: 1em 1em 1em 0;
-				font-weight: normal;
-				color: #a5c9e1
 			}
 		}
 
@@ -77,6 +64,10 @@ $green: #45b964;
 				color: #fff;
 				display: block;
 				padding: 0.5em 0;
+			}
+
+			strong{
+				color: cornsilk
 			}
 
 			@media ( min-width: 600px )	{
@@ -102,50 +93,6 @@ $green: #45b964;
 		}
 	}
 
-	.woostify-logo {
-		border: 0;
-		background: #fff;
-		display: block;
-		margin: 0 auto;
-		border-radius: 50%;
-		width: 100px;
-		height: 100px;
-		text-align: center;
-		position: relative;
-		margin-top: -20px;
-
-		@media ( min-width: 600px ) {
-			width: 150px;
-			height: 150px;
-		}
-
-		span {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translateX(-50%) translateY(-50%);
-			font-size: 70px;
-			width: auto;
-			height: auto;
-		}
-	}
-
-	.woostify-intro {
-		max-width: 415px;
-		margin: 0 auto;
-		text-align: center;
-
-		h1 {
-			line-height: 1.5;
-			font-weight: 400;
-
-			span {
-				display: block;
-				font-size: 75%;
-			}
-		}
-	}
-
 	.woostify-enhance {
 		display: flex;
 		justify-content: center;
@@ -167,7 +114,7 @@ $green: #45b964;
 			width: 100%;
 
 			@media ( min-width: 1140px ) {
-				max-width: 550px;
+				max-width: 600px;
 				margin-right: 20px;
 			}
 		}
@@ -195,10 +142,26 @@ $green: #45b964;
 				flex-wrap: wrap;
 				align-items: center;
 				align-content: center;
+				justyfy-content: space-between;
 
 				.link-to-customie-item {
 					margin: 10px 0;
 					width: 100%;
+
+					&.disabled{
+						filter: grayscale( 100% );
+						cursor: default;
+
+						a{
+							pointer-events: none;
+						}
+					}
+
+					a{
+						&:hover{
+							opacity: 0.7;
+						}
+					}
 
 					@media ( min-width: 720px ) {
 						&:nth-child( odd ) {
@@ -229,7 +192,7 @@ $green: #45b964;
 		}
 
 		.woostify-bundle,
-		.woostify-child-themes {
+		.woostify-pro-featured {
 			padding-bottom: 0.5em;
 		}
 
@@ -248,32 +211,9 @@ $green: #45b964;
 				}
 			}
 		}
-
-		.woostify-child-themes {
-			//order: 3;
-		}
 	}
 
 	a.woostify-button {
-		&:not(.activate-now) {
-			color: #2e4453;
-			border: 1px solid #c8d7e1;
-			padding: 0.5em 1em;
-			border-radius: 3px;
-			font-weight: 600;
-			display: inline-block;
-			box-shadow: 0 1px 0 #c8d7e1;
-			text-decoration: none;
-			background-color: #fff;
-			text-shadow: none;
-			height: auto;
-			line-height: 1.5;
-
-			&:hover {
-				border-color: #a8bece;
-				box-shadow: 0 1px 0 #a8bece;
-			}
-		}
 
 		&.disabled {
 			cursor: default;
@@ -306,7 +246,7 @@ $green: #45b964;
 	}
 
 	/*  */
-	.wst-quick-setting-section{
+	.wf-quick-setting-section{
 		margin: 1em 0;
 		padding: 0 1.5em;
 	}
@@ -314,14 +254,6 @@ $green: #45b964;
 	.woostify-learn-more{
 		@media ( min-width: 720px ) {
 			float: right;
-		}
-	}
-}
-
-@media all and (max-width: 768px) {
-	.appearance_page_woostify-welcome {
-		.woostify-logo {
-			margin-top: 20px;
 		}
 	}
 }
