--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -1,26 +1,10 @@
 .appearance_page_woostify-welcome {
   /*  */
+  /* notice */
 }
 
-@media (max-width: 719px) {
-  .appearance_page_woostify-welcome #wpcontent {
-    padding-left: 0;
-  }
-}
-
-.appearance_page_woostify-welcome .woostify-wrap {
-  background: #e9eff3;
-  padding: 50px 10px 0 10px;
-  border: 10px solid white;
-  margin: 0 auto;
-}
-
-@media (min-width: 720px) {
-  .appearance_page_woostify-welcome .woostify-wrap {
-    padding: 50px;
-    margin-top: 20px;
-    margin-right: 20px;
-  }
+.appearance_page_woostify-welcome #wpcontent {
+  padding: 0;
 }
 
 .appearance_page_woostify-welcome .woostify-wrap a {
@@ -32,16 +16,72 @@
   box-shadow: none !important;
 }
 
+.appearance_page_woostify-welcome .woostify-welcome-container {
+  max-width: 930px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-theme-brand {
+  max-width: 200px;
+}
+
 .appearance_page_woostify-welcome .woostify-welcome-nav {
-  margin: -50px -10px 0 -10px;
-  padding: 1em;
+  background-color: #fff;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 719px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav {
+    padding: 15px 0;
+    text-align: center;
+  }
 }
 
 @media (min-width: 720px) {
-  .appearance_page_woostify-welcome .woostify-welcome-nav {
-    margin: -50px -50px 0 -50px;
-    padding: 0 1em;
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-brand {
+  display: inline-flex;
+  align-items: center;
+  color: #333;
+  color: unset;
+  font-size: 1.4em;
+}
+
+@media (max-width: 719px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-brand {
+    border-bottom: 1px solid #f4f4f4;
+    padding-bottom: 25px;
+    margin-bottom: 15px;
+    justify-content: center;
+  }
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-icon {
+  max-width: 30px;
+  max-height: 40px;
+  position: relative;
+  transform: rotate(-20deg);
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-title {
+  margin: 0 10px 0 5px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #463fba;
+}
+
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-version {
+  background-color: #e5e5e5;
+  border-radius: 2px;
+  font-size: 0.65em;
+  padding: 2px 5px;
 }
 
 .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav__version {
@@ -51,37 +91,33 @@
   font-weight: 700;
 }
 
-@media (min-width: 600px) {
-  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav__version {
-    float: right;
-    padding: 1em 1em 1em 0;
+@media (max-width: 719px) {
+  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link {
+    margin: 0;
   }
 }
 
-.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link {
-  margin: 0;
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
+  display: inline-block;
 }
 
-.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
-  display: block;
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li:last-of-type a {
+  padding-right: 0;
 }
 
 .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
   text-decoration: none;
-  color: #fff;
   display: block;
-  padding: 0.5em 0;
+  padding: 0.5em;
 }
 
-.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link strong {
-  color: cornsilk;
+.appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a:hover {
+  color: #000;
 }
 
-@media (min-width: 600px) {
-  .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
-    display: inline-block;
-  }
+@media (min-width: 719px) {
   .appearance_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
+    color: #333;
     padding: 1em;
   }
 }
@@ -98,16 +134,12 @@
 }
 
 .appearance_page_woostify-welcome .woostify-enhance {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  margin-top: 4em;
-  flex-wrap: wrap;
+  margin-top: 3em;
 }
 
 @media (min-width: 1140px) {
   .appearance_page_woostify-welcome .woostify-enhance {
-    margin: 4em 0px;
+    margin: 3em 0px;
   }
 }
 
@@ -115,6 +147,19 @@
   content: '';
   clear: both;
   display: block;
+}
+
+.appearance_page_woostify-welcome .woostify-enhance .woostify-welcome-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+@media (max-width: 1140px) {
+  .appearance_page_woostify-welcome .woostify-enhance .woostify-welcome-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .appearance_page_woostify-welcome .woostify-enhance .woostify-enhance-content {
@@ -256,4 +301,8 @@
   .appearance_page_woostify-welcome .woostify-learn-more {
     float: right;
   }
+}
+
+.appearance_page_woostify-welcome #wpbody-content .notice {
+  margin-bottom: 10px;
 }
